src/styles/global.css
@import "tailwindcss";
@plugin "@tailwindcss/typography";

@theme {
  --color-bears-bg: #1A1A1A;
  --color-bears-text-onDark: #E1E1E1;
  --color-bears-accent: #C50E1F;
  --color-bears-accent-muted: #A00B19;
  --color-bears-bg-light: #F5F5F5;
  --color-bears-text-onLight: #2B2B2B;
}

body {
  background-color: var(--color-bears-bg);
  color: var(--color-bears-text);
}

